TEST_PROGRAMS/VALID/05/multiple_unary_plus_with_paren.go
package main

func main()  {
  println(+10)
  println(+(+10))
}
