TEST_PROGRAMS/INVALID/07/invalid_else.go
package main

func main() {
	else{
	return x
}
}
